--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
         </div>
     </main>
     <script src="script.js"></script>
+    <div class="welcome-popup">
+        <div class="welcome-popup__content">
+            <button class="welcome-popup__close" title="Закрыть" type="button">&times;</button>
+            <!-- <h3>Добро пожаловать!</h3> -->
+            <p>Делай !!</p>
+        </div>
+    </div>
+    <script src="popup.js"></script>
 </body>
 
 </html>
